# grpc-diffusion-server

./: .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  prometheus.yml  test-local.sh
.github/workflows/: ci.yml  deploy-docs.yml
ai-server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.ci  build_docker.sh  pyproject.toml  redis.conf  run_docker.sh  set_redis.sh
ai-server/src/: ai_server_config.ini  main.py  server.py  server_config.ini
ai-server/src/interface/: __init__.py  diffusion_processing_pb2.py  diffusion_processing_pb2_grpc.py  diffusion_service.py
ai-server/src/model/sd3.5-medium-pytorch/: stable_diffusion.md
ai-server/src/process/: __init__.py  lifecycle.py  server_setup.py  watchdog.py
ai-server/src/utility/: __init__.py  logger.py  worker_utility.py
ai-server/src/worker/: adpater.py  sd_worker.py
ai-server/tests/: __init__.py  conftest.py  test_basic.py
ai-server/tests/unit/: test_adapter.py  test_diffusion_service.py  test_lifecycle.py  test_logger.py  test_server_setup.py  test_watchdog.py  test_worker_utility.py
jupyter/: Diffusion_sample.ipynb
protos/: __init__.py  build_proto.sh  diffusion_processing_pb2_grpc.py
set_supabase/: setup_supabase.sh  uninstall_supabase.sh
swagger/: index.html  openapi.json
web-manager/: .dockerignore  .gitignore  Dockerfile  build_docker.sh  pyproject.toml  run_docker.sh
web-manager/ai-server/: diffusion_processing.proto  server_config.ini
web-manager/app/: main.py  manager_config.ini
web-manager/app/core/: __init__.py  config.py  lifespan.py  manager_config.ini  openapi.py
web-manager/app/database/: __init__.py  auth_schemas.py  image_schemas.py  info_schemas.py  schemas.py  supabase.py
web-manager/app/router/: __init__.py  account_router.py  get_router.py  image_router.py  info_router.py  page_router.py
web-manager/app/scripts/: export_openapi.py  set_admin.py
web-manager/app/service/: __init__.py  auth_service.py  diffusion_processing_pb2_grpc.py  image_requester.py
web-manager/app/utility/: __init__.py  exception_handler.py  logger.py  request.py
web-manager/app/web/static/css/: _navbar.css  create_account.css  gallery.css  info.css  login.css  main.css  status_pages.css  studio.css  user_manage.css
web-manager/app/web/static/js/: _navbar.js  auth.js  create_account.js  gallery.js  info.js  login.js  main.js  studio.js  user_manage.js
web-manager/app/web/templates/: gallery.html  info.html  main.html  studio.html
web-manager/app/web/templates/partials/: _navbar.html
web-manager/app/web/templates/status/: cpu_status.html  fastapi_status.html  gpu_status.html
web-manager/app/web/templates/users/: create_account.html  login.html  user_manage.html
web-manager/setting-scripts/: install_dependencies.sh
web-manager/tests/: __init__.py  conftest.py
web-manager/tests/unit/: test_account_router.py  test_auth_schemas.py  test_auth_service.py  test_config.py  test_exception_handler.py  test_image_requester.py  test_image_router.py  test_image_schemas.py  test_info_router.py  test_lifespan.py  test_page_router.py  test_supabase.py  test_utility.py
