[project]
name = "grpc-ai-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

# CI에서도 작동하는 기본 의존성 (GPU 제외)
dependencies = [
    "grpcio==1.71.0",
    "grpcio-tools==1.71.0",
    "icecream>=2.1.4",
    "msgpack>=1.1.0",
    "pillow-heif>=0.22.0",
    "redis>=5.2.1",
    "numpy<2.0",
    "loguru>=0.7.3",
]

# GPU 전용 의존성을 선택적 그룹으로 분리
[project.optional-dependencies]
gpu = [
    "cucim-cu12>=25.4.0",
    "torchvision>=0.23.0",
    "diffusers>=0.35.1",
    "transformers>=4.55.4",
    "accelerate>=1.10.0",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "fakeredis[lua]>=2.27.3",
    "grpcio-testing>=1.71.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=20",
]
markers = [
    "slow: marks tests as slow to run",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/protos/*_pb2*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]