[project]
name = "grpc-web-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "arrow>=1.3.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.12",
    "grpcio==1.71.0",
    "grpcio-tools==1.71.0",
    "loguru>=0.7.3",
    "opencv-python>=4.11.0.86",
    "pillow-heif==0.22.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
